@@ -19,6 +19,10 @@ Choose a generator. A list of valid ones is output by --help
 .IP "-o|--launch-logger"
 Takes an [admittedly weak and hard-coded] attempt at launching
 obdgpslogger attached to the simulator in question.
+.IP "-c|--launch-screen"
+Takes an [admittedly weak and hard-coded] attempt at launching
+screen attached to the simulator in question. To close that screen window,
+use ctrl-a, k.
 .IP "-v|--version"
 Print out version number and exit.
 .IP "-h|--help"
