@@ -26,7 +26,7 @@ along with obdgpslogger.  If not, see <http://www.gnu.org/licenses/>.
 #include <stdlib.h>
 
 /// This is the elm prompt
-#define ELM_PROMPT ">"
+#define ELM_PROMPT "\n>"
 
 /// Default hide headers
 #define ELM_HEADERS 0
@@ -41,13 +41,13 @@ along with obdgpslogger.  If not, see <http://www.gnu.org/licenses/>.
 #define ELM_VERSION_STRING "ELM327 v1.3 OBDGPSLogger"
 
 /// ELM "don't know" prompt
-#define ELM_QUERY_PROMPT "?\n>"
+#define ELM_QUERY_PROMPT "\n?" ELM_PROMPT
 
 /// ELM "OK" prompt
-#define ELM_OK_PROMPT "OK\n>"
+#define ELM_OK_PROMPT "\nOK" ELM_PROMPT
 
 /// ELM "NO DATA" prompt
-#define ELM_NODATA_PROMPT "NO DATA\n>"
+#define ELM_NODATA_PROMPT "\nNO DATA" ELM_PROMPT
 
 
 /// getopt() long options
@@ -57,11 +57,12 @@ static const struct option longopts[] = {
         { "seed", required_argument, NULL, 's' }, ///< Seed
 	{ "generator", required_argument, NULL, 'g' }, ///< Choose a generator
         { "launch-logger", no_argument, NULL, 'o' }, ///< Launch obdgpslogger
+        { "launch-screen", no_argument, NULL, 'c' }, ///< Launch screen
         { NULL, 0, NULL, 0 } ///< End
 };
 
 /// getopt() short options
-static const char shortopts[] = "hvs:g:o";
+static const char shortopts[] = "hvs:g:oc";
 
 /// Print Help for --help
 /** \param argv0 your program's argv[0]
